src/styles/_info.scss
.info-section {
    display: block;
    align-items: center;
    justify-content: center;
    background-color: white;
}
.heading-2 {
    text-align: center; 
}

.info-block {
    height: auto;
    width: 100%;
    margin: 50px auto;
}

.info-content {
    margin-bottom: 20px;
}

.item {
    display: inline-block;
    width: 300px;
    margin: 20px;
}

.item__image {
    height: 340px;
    margin-bottom: 30px;
    border-radius: 8px;
    background-image: url("../images/city-view.jpg");
    background-position: 0px 0px, 50% 50%;
    background-size: cover, cover;  
}

.item2__image {
    height: 340px;
    margin-bottom: 30px;
    border-radius: 8px;
    background-image: url("../images/swing-bridge.jpg");
    background-position: 0px 0px, 50% 50%;
    background-size: cover, cover;  
}

.item3__image {
    height: 340px;
    margin-bottom: 30px;
    border-radius: 8px;
    background-image: url("../images/group-pic.jpg");
    background-position: 0px 0px, 50% 50%;
    background-size: cover, cover;  
}

.item-content {
    margin-bottom: 20px;
}

.item__text {
    color: gray;
}

@media (max-width: 575px) {
    .info-content {
        display: flex;
        flex-direction: column;
        overflow: hidden;
    }
    .info-block {
        overflow: hidden;
    }
}

